style.css
.jumbotron {
  background-image: url("./Images/02-hero-bg.jpg");
  background-size: cover;
  background-position: center;
  height: 400px;
  width: 100%;
  margin-bottom: 25px;
}

.jumbotron img {
  height: 20%;
  width: 10%;
  margin-right: 100px;
  border-radius: 50%;
}

.card {
  margin: 10px;
}

.groups {
  margin-left: 30px;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.groups li {
  list-style: none;
}

.page-section {
  flex-wrap: nowrap;
  justify-content: space-evenly;
}

.subwork {
  margin-left: 80px;
}

.title {
  font-weight: bolder;
  font-size: 40px;
  margin-right: 100px;
  margin-left: 20px;
  padding-right: 10px;
  width: 200px;
}

.Parent {
  width: 250px;
  border-right: 5px solid darkslategray;
  margin-bottom: 5px;
  justify-content: center;
  margin-left: 80px;
}

.Content {
  width: 900%;
  justify-content: flex-start;
  margin-left: 70px;
  margin-right: 50px;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

#Skills {
  width: 900%;
  justify-content: flex-start;
  margin-left: -15px;
}

.display-5 {
  margin-right:10%;
  margin-bottom:20px;
}

.intro {
  margin-right: 50%;
}

.page-section > a {
  flex-wrap: nowrap;
  align-items: flex-start;
  justify-content: flex-start;
  margin-left: 80px;
}

/* Responsive Styles */
@media (max-width: 900px){

      .Parent {
        width: 100px;
        border-right: none;
        margin-bottom: 5px;
        justify-content: flex-start;
        align-items: center;
        margin-right: 50px;
      }

      .page-section {
        flex-direction: column;
        justify-content: center;
        padding: 10%;
      }

      .groups{
        flex-direction: column;
        width: 100%;
        justify-content: flex-start;
        margin-left: -40px;
        font-size: small;
      }

       .Content{
        width: 100%;
        justify-content: flex-start;
        margin-left: 5px;
        margin-right: 20px;
      }

      .jumbotron img {
        height: 150px;
        width: 100px;
      }

      .page-section > a {
        margin-left: 10px;
      }
}

